--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
       <h2 id="bio-title">Sobre mí</h2>
       <p>Soy <strong>Ricardo Bisignano</strong>, comediante, actor y músico argentino. En escena combino <strong>stand up con canciones improvisadas</strong> e interacción constante con el público.</p>
       <p>Participé en <em>Comedy Central Stand-Up</em> (edición Argentina) y tuve apariciones en programas como <em>Bendita TV</em>, <em>Hora de Reír</em> e <em>Informadísimos</em>.</p>
-      <p>Gire con mis unipersonales <em>Viste?</em>, <em>Sin Calle</em> y <em>The Working Progre</em>, presentándome en teatros y espacios culturales de todo el país y países limítrofes.</p>
-      <p>Comparto clips y canciones en <strong>Instagram</strong>, <strong>YouTube</strong>, <strong>TikTok</strong> y <strong>Facebook</strong>, donde sigo explorando nuevas formas de acercar el humor a la gente.</p>
+      <p>Gire con mis unipersonales <em>Viste?</em>, <em>Sin Calle</em> y <em>The Working Progre</em>, girando todo el país y países limítrofes.</p>
+      <p>Comparto clips y canciones en <strong>Instagram</strong>, <strong>YouTube</strong>, <strong>TikTok</strong> y <strong>Facebook</strong></p>
     </div>
 
     <!-- La foto es decorativa: aria-hidden + alt vacío -->
