--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-<!-- Metricool Tracker -->
+<!-- Metricool Tracker (be.js) -->
 <script>
-  (function(){
-    var mc = document.createElement('script');
-    mc.async = true;
-    mc.src = 'https://tracker.metricool.com/c3po.js?hash=TU_HASH_DE_METRICOOL';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(mc, s);
-  })();
+  function loadScript(cb){
+    var head=document.getElementsByTagName("head")[0];
+    var s=document.createElement("script");
+    s.type="text/javascript";
+    s.src="https://tracker.metricool.com/resources/be.js";
+    s.onload=cb; s.onreadystatechange=cb;
+    head.appendChild(s);
+  }
+  loadScript(function(){
+    beTracker.t({ hash: "4ae811a39424f16b35ee6f160f415523" });
+  });
 </script>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
